--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,17 +1,20 @@
+on:
+  pull_request: {}
+  push:
+    branches:
+    - main
+    - master
 name: Semgrep
-on: [pull_request]
 jobs:
   semgrep:
     name: Scan
     runs-on: ubuntu-latest
-    env:
-      INPUT_PUBLISHURL: https://dev.semgrep.dev
     steps:
-      - uses: actions/checkout@v1
-      - uses: returntocorp/semgrep-action@inline-pr-comments
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-          publishDeployment: 57
-          config: p/bandit
+    - uses: actions/checkout@v2
+    - uses: returntocorp/semgrep-action@v1
+      with:
+        auditOn: push
+        publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
+        publishDeployment: 59
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
