--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -14,7 +14,8 @@ jobs:
     - uses: returntocorp/semgrep-action@v1
       with:
         auditOn: push
+        publishUrl: https://staging.semgrep.dev
         publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-        publishDeployment: 59
+        publishDeployment: 42
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
